<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="50dp"
    android:background="@color/general_backgroud"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            app:layout_scrollFlags="scroll|enterAlways"
            android:paddingRight="15dp"
            android:paddingBottom="5dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:text="@string/lainnya"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/sub_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:paddingRight="10dp"
                    android:text="@string/menu_lainnya" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:fillViewport="true"
        android:paddingBottom="50dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/module"
                android:textSize="14sp"
                android:textColor="@color/primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="40dp"
                android:paddingRight="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:text="@string/dompet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="11sp"
                    android:text="5 dompet digunakan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="40dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:text="@string/kategori"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="11sp"
                    android:text="16 kategori digunakan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <include
                layout="@layout/line"/>

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:text="@string/tampilan"
                android:textSize="14sp"
                android:textColor="@color/primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:id="@+id/lvTheme"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="40dp"
                android:paddingRight="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:text="@string/tema"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/valTheme"
                    android:textSize="11sp"
                    android:text="@string/default_sistem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/lvBahasa"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="40dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:text="@string/bahasa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/valBahasa"
                    android:textSize="11sp"
                    android:text="Indonesia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <include layout="@layout/line"/>

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:text="Aplikasi"
                android:textSize="14sp"
                android:textColor="@color/primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="40dp"
                android:paddingRight="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:text="Hapus iklan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="11sp"
                    android:text="Gunakan aplikasi tanpa iklan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="40dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:text="Bagikan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="11sp"
                    android:text="Yuk, bagikan aplikasi ke teman-temanmu sekarang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="40dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:text="Tentang aplikasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="11sp"
                    android:text="Lihat detail informasi aplikasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="40dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:text="Penilaian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="11sp"
                    android:text="Beri penilaian terbaikmu untuk aplikasi ini"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <include layout="@layout/line"/>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>